Добавлен класс ru.saperion.webclient.Tools для работы с WEB-клиентом. На данный момент есть только функция вывода сообщения.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.authentication-keys-7.5.4.jar=lib\\authentication-keys-7.5.4.jar
 file.reference.authentication-otp-7.5.4.jar=lib\\authentication-otp-7.5.4.jar
 file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
 file.reference.render-engines-core-2.2.0.jar=lib\\render-engines-core-2.2.0.jar
+file.reference.ru-saperion.jar=C:\\Users\\vdrazdov\\Documents\\NetBeansProjects\\JavaWebExample\\lib\\ru-saperion.jar
 file.reference.sacache-2.2.1.jar=lib\\sacache-2.2.1.jar
 file.reference.saperion-common-lang-1.4.0.jar=lib\\saperion-common-lang-1.4.0.jar
 file.reference.scr-classicconnector-7.5.4.jar=lib\\scr-classicconnector-7.5.4.jar
@@ -63,7 +64,8 @@ javac.classpath=\
     ${file.reference.sacache-2.2.1.jar}:\
     ${file.reference.render-engines-core-2.2.0.jar}:\
     ${file.reference.slf4j-api-1.6.4.jar}:\
-    ${file.reference.applsrv-interface-7.5.4.jar}
+    ${file.reference.applsrv-interface-7.5.4.jar}:\
+    ${file.reference.ru-saperion.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
